# src/main/resources/openapi/documentation.yaml
@@ -5,8 +5,6 @@ info:
   version: "5.9.9"
 servers:
   - url: "http://0.0.0.0:8080/api/v5"
-security:
-  - ApiKeyAuth: []
 tags:
   - name: "news"
   - name: "anime"
@@ -589,11 +587,6 @@ paths:
           $ref: "#/components/responses/OkArray"
 
 components:
-  securitySchemes:
-    ApiKeyAuth:
-      type: "apiKey"
-      in: "header"
-      name: "x-api-key"
   parameters:
     IdPath:
       name: "id"
